src/test/resources/Parser/SyntaxErrors/SignatureCollision.front
class A:
    test (a: A, b: B) {}
    test (a: A, b: B, a: A) {}
    test (a: A, b: B) -> A {}

class B: